fixed text overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -344,7 +344,7 @@ section {
     }
 
     .about-dijkstra {
-        width: 50ch;
+        width: 35ch;
     }
 }
 
